2000-08-07  Michael Yount <csf@moscow.com>
 
	* lib/Mj/Config.pm (set):  Initialize value if it is not 
	defined.  (Thanks to Todd Goodman.)

2000-08-06  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm (_createlist):  Create the archive
	directory unless "noarchive" mode is specified.  Generate
	a password randomly.  Send the "new_list" file to the 
	owner unless "nowelcome" mode was specified.
	Add "destroy" mode, which will remove a list by renaming
	its directory, but only if there are no subscribers.
	Destroy mode also regenerates the aliases.

2000-08-05  Michael Yount <csf@moscow.com>

	* lib/Mj/List.pm (make_setting):  Allow nomail-return to
	work for vacations that are not timed.

2000-08-04  Michael Yount <csf@moscow.com>

	* bin/mj_email, bin/mj_enqueue:  delete unneeded envvars.

	* bin/mj_queuerun:  randomize directories and files. 
	Fix indentation.  

	* bin/mj_wwwadm:  simplify command form maintenance.

	* files/en/consult, files/en/consult_noweb:  Suggest
	that the accepter type an explanation.

	* lib/Majordomo.pm: (new) Treat the registry as
	a subscriber list for the GLOBAL list.  This allows
	the Deliver module to distribute messages to addresses
	in the registry.
	(announce) New command.  Distribute a file to one
	or more classes of subscribers.  Each message is
	sent as a probe, with the recipient in the To: header.
	This could be used for periodic reminders, or 
	announcements that need to reach 'digest' and 'nomail'
	subscribers immediately.
	(archive_chunk) Allow the type of digest for the
	archive-get command to be specified in the mode ("-mime"
	for mime; text otherwise.)
	(report) New, iterated command.  Obtain raw or summarized
	data for recent log entries for a mailing list.
	The data can be constrained by action or by date.
	(get_all_lists, _make_list) Make DEFAULT data available 
	to Mj::List::new when all of the lists are being 
	loaded, to save redundant lookups.

	* lib/mj_cf_defs.pl: Add 'MSGRCPT' to admin_header checks.
